[gd_scene load_steps=2 format=3 uid="uid://bpqmo5qn0fyg3"]

[ext_resource type="Script" path="res://systems/enemy_ai/EnemyAI.gd" id="1_ehksl"]

[node name="EnemyAI" type="Node2D"]
script = ExtResource("1_ehksl")

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="PatrolTimer" to="." method="_on_patrol_timer_timeout"]
